# painterest

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  instances.json  justfile  pyproject.toml  tailwind.config.js
src/: main.py  proxy.py
src/api/: pin.py  scrape.py  search.py
static/css/: styles.css
templates/: base.html  index.html  pin.html  search.html
templates/partials/: navbar.html
